--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="name">Name</string>
     <string name="username">Username</string>
     <string name="verifying_your_email_address">Verifying your Email Address</string>
+    <string name="chats">Chats</string>
+    <string name="events">Events</string>
+    <string name="search">Search</string>
+    <string name="people">People</string>
 </resources>
