--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="events">Events</string>
     <string name="search">Search</string>
     <string name="people">People</string>
+    <string name="conversations">Conversations</string>
+    <string name="contacts">Contacts</string>
+    <string name="suggested">Suggested</string>
+    <string name="addcontacts">Add Contacts</string>
 </resources>
