--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="friends">Friends</string>
     <string name="sent">Sent</string>
     <string name="FR_received_msg">%1$s (%2$s) sent you a friend request</string>
+    <string name="FR_accepted_msg">%1$s (%2$s) accepted your friend request</string>
+    <string name="accept">Accept</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chat">Chat</string>
 </resources>
