--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Engage</string>
-    <string name="welcome_to_engage">Welcome to Engage</string>
+    <string name="welcome_to_engage">Engage</string>
     <string name="tagline">Better way to socialize</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
@@ -9,7 +9,7 @@
     <string name="password">Password</string>
     <string name="sign_up_with_engage">Sign Up with Engage</string>
     <string name="one_last_step">One Last Step</string>
-    <string name="name">Name</string>
+    <string name="name">Your Name</string>
     <string name="username">Username</string>
     <string name="verifying_your_email_address">Verifying your Email Address</string>
     <string name="chats">Chats</string>
@@ -28,6 +28,7 @@
     <string name="FR_received_msg">%1$s (%2$s) sent you a friend request</string>
     <string name="FR_accepted_msg">%1$s (%2$s) accepted your friend request</string>
     <string name="accept">Accept</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
