--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="reminder_title">Reminder Title</string>
     <string name="reminder_description">Reminder description</string>
     <string name="create_reminder">Create Reminder</string>
+    <string name="done">Done</string>
 </resources>
