--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="reminder_description">Reminder description</string>
     <string name="create_reminder">Create Reminder</string>
     <string name="done">Done</string>
+    <string name="settings">Settings</string>
 </resources>
