--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="done">Done</string>
     <string name="settings">Settings</string>
     <string name="contacts">Contacts</string>
+    <string name="type_message_here">Type message here...</string>
+    <string name="search_here">Search here...</string>
 </resources>
